Failing to decode a layer tree commit message resulted in silent and mysterious failure https://bugs.webkit.org/show_bug.cgi?id=131766 <rdar://problem/16520894>

Reviewed by Sam Weinig.

If the message decode failed, we should have already marked the message as invalid.
Failing to do so indicates in a decode code coding error.

* Platform/IPC/HandleMessage.h:
(IPC::handleMessage):
(IPC::handleMessageVariadic):
(IPC::handleMessageDelayed):

Canonical link: https://commits.webkit.org/149824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167390 268f45cc-cd09-0410-ab3c-d52691b4dbfc